Fix heading bottom spacing

--- a/src/components/Heading.module.scss
+++ b/src/components/Heading.module.scss
@@ -7,7 +7,7 @@ $primary: #fd5092;
   background: url(../assets/worldmap.png) no-repeat center center/cover;
   background-color: $primary;
   background-size: 100% 100%;
-  height: 50vw;
+  height: 30vw;
   min-height: 150px;
   display: flex;
   flex-direction: column;
